# prometheus

./: .env.example  .gitignore  Dockerfile  Evaluation.py  KnowledgeOps_TeamSpecs.pptx  README.md  README_IMPLEMENTATION.md  README_KNOWLEDGEOPS.md  README_fastapi.md  SETUP.md  docker-compose.yml  example.py  extract_pptx.ps1  extract_text_simple.ps1  pptx_content.txt  pyproject.toml  pytest.ini  requirements.txt  test_inputs.md
Inputs/: prometheus_eval_01.json  prometheus_eval_02.json  prometheus_eval_03.json  prometheus_eval_04.json  prometheus_eval_05.json  prometheus_eval_06.json  prometheus_eval_07.json  prometheus_eval_08.json  prometheus_eval_09.json  prometheus_eval_10.json
deployment/: README_deploy.md  trustsignal.service
eval/: prometheus_eval_04.json  prometheus_eval_05.json  prometheus_eval_06.json  prometheus_eval_07.json  prometheus_eval_08.json  prometheus_eval_09.json  prometheus_eval_10.json  run_eval.py
pptx_extracted/: [Content_Types].xml
pptx_extracted/docProps/: app.xml  core.xml
pptx_extracted/ppt/: presentation.xml  revisionInfo.xml
prometheus/: __init__.py  config.py  logging_config.py  models.py  observability.py  pipeline.py
scripts/: batch_evaluate.py  install_windows_service.ps1
server/: __init__.py  api.py  mcp_server.py
src/: __init__.py  config.py  evaluator.py  explainer.py  main.py  models.py  nli_client.py  preprocessor.py  scorer.py
tests/: __init__.py  conftest.py  test_api.py  test_mcp_server.py  test_nli_client.py  test_preprocessor.py  test_scorer.py
tools/: post_eval.py  test_api_scenarios.py
(+80 files in other folders)
