[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prometheus"
version = "0.1.0"
description = "RAG hallucination detection — faithfulness scoring with pinpointed problem spans"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "transformers>=4.30.0",
    "torch>=2.0.0"
]

[project.optional-dependencies]
api = ["fastapi>=0.104", "uvicorn>=0.24"]
mcp = ["mcp>=1.0"]
observability = ["ddtrace>=2.0", "datadog>=0.50"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "respx>=0.21"]
all = ["prometheus[api,mcp,observability,dev]"]

[project.scripts]
prometheus-mcp = "server.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["prometheus", "server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
